--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Idle RPG</title>
+    <title>Tales of Heroes, Legends & Beasts</title>
+    <meta name="description" content="Tales of Heroes, Legends & Beasts - An Idle RPG Adventure. Build your character, explore dungeons, master skills, and progress even while offline." />
   </head>
   <body>
     <div id="root"></div>
