--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tales of Heroes, Legends & Beasts</title>
-    <meta name="description" content="Tales of Heroes, Legends & Beasts - An Idle RPG Adventure. Build your character, explore dungeons, master skills, and progress even while offline." />
+    <meta
+      name="description"
+      content="Tales of Heroes, Legends & Beasts - An Idle RPG Adventure. Build your character, explore dungeons, master skills, and progress even while offline."
+    />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
